bindata/assets/jobset-controller-generated/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_jobset-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: jobset
    app.kubernetes.io/instance: jobset
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jobset
    app.kubernetes.io/part-of: jobset
  name: jobset-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: openshift-jobset-operator
      path: /validate-jobset-x-k8s-io-v1alpha2-jobset
  failurePolicy: Fail
  name: vjobset.kb.io
  rules:
  - apiGroups:
    - jobset.x-k8s.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: openshift-jobset-operator
      path: /validate--v1-pod
  failurePolicy: Fail
  name: vpod.kb.io
  objectSelector:
    matchExpressions:
    - key: jobset.sigs.k8s.io/jobset-name
      operator: Exists
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
